# rect-iter

./: Cargo.toml  README.md
src/: lib.rs
