[package]
name = "rect-iter"
version = "0.0.1"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
keywords = ["geometry"]

[dependencies]
num-traits = "0.2"
euclid = "0.17"
image = {version = "0.18", optional = true}

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]
optional = true

[package.metadata.docs.rs]
all-features = true