[package]
name = "rect-iter"
version = "0.0.1"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
keywords = ["geometry"]

[dependencies]
num-traits = "0.2"
tuple-map = "0.1.0"

[dependencies.euclid]
version = "0.17"
optional = true

[dependencies.image]
version = "0.18"
optional = true

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]
optional = true

[features]
default = ["euclid"]

[package.metadata.docs.rs]
all-features = true